# PICO-ROM

./: .gitignore  Doxyfile  README.md
.github/workflows/: docs.yml  helloworld.yml  main.yml
docs/: Doxyfile  conf.py  firmware.md  hardware-api.md  host-tools.md  index.md  requirements.txt
docs/hardware/: bring-up.md  pinout.md  troubleshooting.md  wiring.md
pico-rom-test/: CMakeLists.txt  main.c
rom-builder/: build-rom.py  hardware_api.py  main.py  pyproject.toml  upload-rom.py
